syntax = "proto2";
package message;

message actorstate_toS 
{
	required string stateName = 1;
}

message actorstate_toC 
{
	required string clientId = 1;
	required string stateName = 2;
}
