syntax = "proto2";
package message;
import "common.proto";

message login_toS {
	required string name = 1;
}

message login_toC {
	required EnumType code = 1;
}
