syntax = "proto2";
package message;

message takedamage_toS 
{
	required uint32 damagePoint = 1;
}

message takedamage_toC 
{
	required string clientId = 1;
	required uint32 damagePoint = 2;
}
